--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<html>
+<head>
+	<title>dmmx - A journey from the future to the past</title>
+</head>
+<body>
+	<h1>What's New<h1>
+	
+	<h2>Beginning Again</h2>
+	<pre>2023-05-29</pre>
+	<p>Today I start a new blog to talk about the projects I am working
+	on. There was actually a first attempt using Jekyll, but that was getting
+	to hard to maintain. Jekyll is build on Ruby, and ruby on the Mac was
+	getting to hard to keep up to date. Maybe I'll futz with it later.
+	Eventually I would like to use a static site generator, but for now it
+	is static html pages.
+	</p>
+	
+</body> 
