--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 	<title>dmmx - A journey from the future to the past</title>
 </head>
 <body>
-	<h1>What's New<h1>
+	dmmx
+	<hr>
+	
+	<h1>What's New</h1>
+	
+	<h2>Publishing Workflow 0.1</h2>
+	<pre>2023-05-29</pre>
+	<p>First thing I want to establish in a basic, minimal, publishing workflow
+	for my blog. Writing will be done on Hatari, an Atari ST emulator. The 
+	writing tools will vary, but to start I'll use the QED text editor to write
+	the HTML pages and the CAB web browser to preview them. This is a nice 
+	combination because I configured QED to be the source viewer in CAB.
+	This gives me the ability to launch QED from CAB and then edit pages, close
+	QED, and review the pages before publication. To get started publication
+	involves simply converting the filenames to lowercase, changing the
+	extension from .htm to .html, and then copying the files from the BLOG
+	folder where the souce files are stored to the dmmx.github.io folder
+	where the git repo for the blog resides. I can then run the git commands
+	to publish the blog from there. The lowercase, extension conversion, and
+	copy are all done from the host computer.
+	<p>
 	
 	<h2>Beginning Again</h2>
 	<pre>2023-05-29</pre>
