First blog post

--- a/ATARIBLG/HATARI01.HTM
+++ b/ATARIBLG/HATARI01.HTM
@@ -69,10 +69,15 @@ Now let's create an <b>fd</b> folder in our <b>~/Hatari</b> folder
 and set  <b>Default images location</b> to point to that directory. We will
 set up hard disks at a later time.</p>
 
+<p><a href="img/cfg1/disks.htm">Disk panel image</a></p>
+
 <h2>ROM</h2>
 
 <p>Set <b>TOS Image</b> to point to the etos1024k.img file downloaded 
 earlier. The Cartridge image setting can be left empty.</p>
+
+<p><a href="img/cfg1/rom.htm">ROM Panel image</a></p>
+
 
 <h2>Atari Screen</h2>
 
@@ -81,10 +86,14 @@ start out with a color monitor switching betweeb low and medium resolution.
 We can also use a Mono monitor for productivity applications when necessary,
 though it does require a restart.</p>
 
+<p><a href="img/cfg1/ascreen.htm">Atari screen panel image</a></p>
+
 <h2>Display</h2>
 
 <p>We can keep these setting as is for now, though we may need to tweak them 
 for performance reasons later.</p>
+
+<p><a href="img/cfg1/display.htm>Display panel image</a></p>
 
 <h2>Sound</h2>
 
@@ -100,6 +109,8 @@ memory, use the following settings:</p>
 <p><b>FPU:</b>  None</p>
 <p><b>ST RAM Size:</b>  4 Mib</p>
 
+<p><a href="img/cfg1/system.htm">System panel image</a></p>
+
 <h2>Joysticks</h2>
 
 <p>No changes needed.</p>
@@ -109,6 +120,8 @@ memory, use the following settings:</p>
 <p>For the best compatibility I change the Keyboard mapping to 
 <b>Scancode</b>. With this setting the tilde (~) and the backslash (\) keys 
 are reversed, but all other keys are mapped correctly.</p>
+
+<p><a href="img/cfg1/keyboard.htm">Keyboard panel image</a></p>
 
 <h2>Peripheral</h2>
 
