--- a/ATARIBLG/INDEX.HTM
+++ b/ATARIBLG/INDEX.HTM
@@ -3,13 +3,13 @@
 	<title>dmmx - AI, Cloud, Retro</title>
 </head>
 <body>
-	<a href="INDEX.HTM">dmmx</a>
+	<a href="../index.html">dmmx</a>
 	<hr>
 	
 	<h1>What's New</h1>
 	
 	<p>2023-05-29 | 
-	<a href="ATARIBLG/HATARI01.HTM">Hatari Configuration Part 1</a>
+	<a href="HATARI01.HTM">Hatari Configuration Part 1</a>
 	
 </body> 
 </html>
