fix more casing issues

--- a/ATARIBLG/HATARI01.HTM
+++ b/ATARIBLG/HATARI01.HTM
@@ -93,7 +93,7 @@ though it does require a restart.</p>
 <p>We can keep these setting as is for now, though we may need to tweak them 
 for performance reasons later.</p>
 
-<p><a href="IMG/CFG1/DISPLAY.HTM>Display panel image</a></p>
+<p><a href="IMG/CFG1/DISPLAY.HTM">Display panel image</a></p>
 
 <h2>Sound</h2>
 
