--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>dmmx - AI, Cloud, Retro</title>
 </head>
 <body>
-	<a href="INDEX.HTM">dmmx</a>
+	<a href="index.html">dmmx</a>
 	<hr>
 	
 	<h1>What's New</h1>
