--- a/ATARIBLG/INDEX.HTM
+++ b/ATARIBLG/INDEX.HTM
@@ -8,8 +8,12 @@
 	
 	<h1>What's New</h1>
 	
+	<p>2023-06-19 |
+	<a href="LINKS.HTM">Links to favorite Atari sites</a>
+	
 	<p>2023-05-29 | 
 	<a href="HATARI01.HTM">Hatari Configuration Part 1</a>
+	
 	
 </body> 
 </html>
