Another set of links

--- a/ATARIBLG/LINKS.HTM
+++ b/ATARIBLG/LINKS.HTM
@@ -37,6 +37,29 @@ commercial offering, but it looks like it is free now.</dd>
 <dt><a href="https://www.atariuptodate.de/en">AtariUpToDate</a></dt>
 <dd>2023-06-19 | A great collection of Atari ST software, much like Atarimania</dd>
 
+<dt><a href="https://github.com/freemint/qed/tree/master">QED</a></dt>
+<dd>2023-06-19 | <i>The</i> Atari ST Text Editor.</dd>
+
+<dt><a href="http://tho-otto.de/hypview/">Online HypView</a></dt>
+<dd>2023-06-19 | Web site for reading Atari ST Hyp files online. A large selection is available, including
+ the QED Hyp file.</dd>
+
+<dt><a href="https://emutos.sourceforge.io">Emutos</a></dt>
+<dd>2023-06-19 | Official site of Emutos.</dd>
+
+<dt><a href="https://www.atari-forum.com/viewtopic.php?t=37121">
+StinG 1.26 source available</a></dt>
+<dd>2023-06-19 | Atari-Forum post for STinG 1.26.</dd>
+
+<dt><a href="https://github.com/th-otto/STinG">STinG | Github</a></dt>
+<dd>2023-06-19 | GitHub site for STinG, the Atari ST TCP/Internet library</dd>
+
+<dt><a href="https://www.atari-forum.com/viewtopic.php?t=42688">
+Getting online with Hatari</a></dt>
+<dd>2023-06-19 | Atari-Forum post with information about networking with
+Hatari. I was able to use this post to get telnet/bbs access working but 
+no luck with internet access.</dd>
+
 </dl>
 </body>
 </html>
