--- a/ATARIBLG/LINKS.HTM
+++ b/ATARIBLG/LINKS.HTM
@@ -60,6 +60,15 @@ Getting online with Hatari</a></dt>
 Hatari. I was able to use this post to get telnet/bbs access working but 
 no luck with internet access.</dd>
 
+<dt><a href="http://www4.pair.com/gribnif/downloads/">Gribnif Software</a></dt>
+<dd>2023-06-19 | Home of NeoDesk and Geneva.</dt>
+
+<dt><a href="https://www.youtube.com/@commodoreisnottheonlyfruit">
+Commodore is not the only fruit</a></dt>
+<dd>2023-06-19 | YouTube channel with a lot of good videos on setting up
+an Atari ST including hard drives and fonts.</dd>
+
+
 </dl>
 </body>
 </html>
