--- a/ATARIBLG/LINKS.HTM
+++ b/ATARIBLG/LINKS.HTM
@@ -68,6 +68,55 @@ Commodore is not the only fruit</a></dt>
 <dd>2023-06-19 | YouTube channel with a lot of good videos on setting up
 an Atari ST including hard drives and fonts.</dd>
 
+<dt><a href="https://www.atariuptodate.de/en/supports/OLGA/#">
+Object Linking for Gem Applications (OLGA)</a></dt>
+<dd>2023-06-19 | I should learn more about this because it does come up
+now and again.</dd>
+
+<dt><a href="https://www.atariuptodate.de/en/atari-pd-serie/xe/101-150">
+XEST PD - Public Domain</a></dt>
+<dd>2023-06-19 | A nice selection of public domain disks for the Atari ST.
+It is from this collection that I found emacs and stevie.</dd>
+
+<dt><a href="https://www.atariuptodate.de/en/4774/stevie">
+stevie text editor (vi clone)</a></dt>
+<dd>2023-06-19 | I have been looking for stevie for years but I did not
+know it was a vi clone until I found it.</dd>
+
+<dt><a href="https://donzé.ch/atari/">
+Donze Atari Section</a></dt>
+<dd>2023-06-19 | Includes HypView and MacAranym.</dd>
+
+<dt><a href="https://donzé.ch/atari/software/hypview/">
+Donze HypView page</a></dt>
+<dd>2023-06-19 | HypView is a replacement for ST-Guide.</dd>
+
+<dt><a href="https://www.atari-forum.com/viewtopic.php?t=13788">
+ST Guide (Hypertext Viewer) Wanted</a></dt>
+<dd>2023-06-19 | Atari-Forum post on ST-Guide and HypView.</dd>
+
+<dt><a href="https://docs.dev-docs.org">Atari Document Archive</a></dt>
+<dd>2023-06-19 | A go to site for Atari technical documentation.</dd>
+
+<dt><a href="http://info-coach.fr/atari/software/development.php">
+Info-Coach</a></dt>
+<dd>2023-06-19 | Information on Atari ST programming and development.</dd>
+
+<dt><a href="https://www.atari-forum.com/viewtopic.php?t=14616">
+Clayton Walnum's C-manship Complete Release as HYPertext</a></dt>
+<dd>2023-06-19 | Atari-Forum post about C-manship.</dd>
+
+<dt><a href="http://www.atarimania.com/mags/pdf/analog_no_38.pdf">
+Analog Issue 38</a></dt>
+<dd>2023-06-19 | Contains first of Clayton Walnum's C-manship articles.</dd>
+
+<dt><a href="http://www.atarimania.com/mags/pdf/analog_no_39.pdf">
+Analog Issue 39</a></dt>
+<dd>2023-06-19 | Contains second of Clayton Walnum's C-manship articles.</dd>
+
+<dt><a href="http://www.atarimania.com/mags/pdf/st-log-magazine-issue-01.pdf">
+ST-Log Premier Issue
+<dd>2023-06-19 | Contains third of Clayton Walnum's C-manship articles.</dd>
 
 </dl>
 </body>
