Link in added pages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 	<hr>
 	
 	<h1>What's New</h1>
+
+	<p>2023-06-19 | 
+	<a href="PHLINKS.HTM">Philosophy Links</a>
+	</p>
+
+
+	<p>2023-06-19 | 
+	<a href="ATARIBLG/LINKS.HTM">Atari Links</a>
+	</p>
+
 	
 	<p>2023-05-29 | 
 	<a href="ATARIBLG/HATARI01.HTM">Hatari Configuration Part 1</a>
-	
+	</p>
 </body> 
 </html>
